@@ -1,3 +1,3 @@
 EBUILD ocropus-svn-9999.ebuild 808 RMD160 2e2f8bfdee394a93293374dfed43d6bc0279816d SHA1 255cba3a688e9be6b6a2f6e664bf36764847ede1 SHA256 b1e7d59b5ad3740ad8ad43fed1e96c3eaece0c3d62603fc129b0ddd692dcc269
-MISC ChangeLog 447 RMD160 ddf4f2b95dafeecd785551a168e42f70b4b72652 SHA1 4d18946185d7c3d46b26d2df7bff0148ff1ba0c3 SHA256 a074298b834c027042f9a219ee75657ad76529331ef8c77602f5f53232acfea1
-MISC metadata.xml 509 RMD160 98c7c7039383677955d7bc5121bc60199eb660ca SHA1 02fd6b08e377aa221ea4ba063060923d948b9f37 SHA256 6eff6e61ceb8a90b228c9a65f1416e02209dd3c27a2717412f07348e1fd6ab21
+MISC ChangeLog 537 RMD160 e010ddba5e6241783c7cf0cd33e97d9192f6354b SHA1 b178275532ba5b0a4208a26768373b11ab87aac2 SHA256 9cc60793dd234ca78730c1c09c39f9d2769e0f59b49d6d947696ff948c54e453
+MISC metadata.xml 425 RMD160 c35642794c37a97296f5ef69c8c12c71210bed50 SHA1 9fedacaad57658ce5fe17e667a4cc701f4199375 SHA256 438cf2ef0c0c35761383003091b1416b9167a4fc2a5ab766cce61375828f596f
