@@ -1,6 +1,9 @@
 # ChangeLog for app-text/ocropus-svn
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  11 Sep 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> metadata.xml:
+  Fix metadata.xml
 
   18 Jul 2007; Bradford Folkens (mobilfunk) <bfolkens@gmail.com>
   ocropus-svn-9999.ebuild:
